app/assets/stylesheets/hero.scss
// Hero
//
.hero {
  background-color: black;
  position: relative;
  margin: 0;
  max-height: 480px;
  padding: 0;
  width: 100%;
  overflow: hidden;
}

.hero-homepage {
  max-height: 700px;
  &::after {
    position: absolute;
    content: ' ';
    bottom: 20px;
    left: 50%;
    opacity: 0.8;
    border-right: solid white;
    border-bottom: solid white;
    border-width: 2px;
    transform: rotate(0.125turn) translate3d(-50%, 0, 0);
    width: 30px;
    height: 30px;
  }
}

.hero-video,
.hero > img {
  opacity: 0.5;
  width: 100%;
  height: auto;

  .homepage .hero:first-child & {
    opacity: 0.7;
  }
}

.hero-page-title,
.hero-content {
  @extend .wrapper;
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate3d(-50%, -50%, 0);
  text-align: center;
}

.hero-content {
  font-size: 28px;
  line-height: 1.5em;
  letter-spacing: 1px;
}

.hero-page-title {
  font-size: 28px;
  letter-spacing: 1px;
}

.hero-title-subtitle {
  @extend .wrapper;
  position: absolute;
  bottom: 25%;
  left: 50%;
  transform: translate3d(-50%, 0%, 0);
  text-transform: uppercase;

  a {
    color: #999999;
  }
}

.hero-title {
  font-weight: 100;
  font-size: 72px;
}

.hero-lesson-links {
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
  width: $content-max-width;
}

.lesson-links {
  display: flex;
  align-items: center;
  justify-content: center;
}

.lesson-links a.lesson-link {
  position: relative;
  padding: 10px 20px;
  color: #CCCCCC;
  text-transform: uppercase;
  @include ease;
  &:not(:first-child) {
    margin-left: 50px;
  }
  &:hover {
    color: white;
    background: rgba(white, 0.3);
  }
  &:active {
    color: white;
    background: rgba(white, 0.5);
    transition: none;
  }
  &.current {
    font-weight: bold;
    color: white;
  }
  &.current::after {
    position: absolute;
    bottom: -200%;
    left: 50%;
    content: '';
    border-color: white;
    border-style: solid;
    border-left: 26px solid transparent;
    border-bottom: 26px solid transparent;
    border-right: 26px solid white;
    border-top: 26px solid white;
    width: 20px;
    height: 20px;
    transform: translateX(-50%) rotate(-45deg);
  }
}

.hero-content,
.hero-title,
.hero-subtitle,
.hero-page-title,
.quote {
  color: white;
  h2 {
    color: white;
  }
}

